white space fix

--- a/Real website/Html/standard format/embêr.css
+++ b/Real website/Html/standard format/embêr.css
@@ -683,29 +683,7 @@ h2 {
     align-items: center;
     background-color: #EDE4D3;
     margin: 0;
-    top: 1000px;
-}
-
-.sources {
-    position: absolute;
-    z-index: 100;
-    width: 100%;
-    background-color: #EDE4D3;
-    height: 900px;
-    top: 2480px;
-    transition: all .3 ease-in-out;
-    background-repeat: no-repeat;
-}
-
-.partnerships {
-    position: absolute;
-    z-index: 222;
-    width: 100%;;
-    height:900px;
-    top: 3380px;
-    background-color: #2D6A4F;
-    transition: all .3 ease-in-out;
-    background-repeat: no-repeat;
+    top: 800px;
 }
 
 .gallery {
